# hybrid-photonic-mi-bci

./: .gitignore  README.md  hybrid_photonic_mi_bci_concept.md  pyproject.toml
Dataset/: README.md
artifacts/: README.md
demo_api/: __init__.py  app.py  engine.py
docs/: demo_architecture.md  technical_documentation_outline.md
examples/: __init__.py  fbcsp_design_args.py  run_bciciv_replay.py  run_bnci2014_004_personalization.py  run_cyton_host.py  run_experience_photonic_line.py  run_fbcsp_design_comparison.py  run_fbcsp_reference.py  run_single_window_inference.py  run_small_network_line.py
hybrid_photonic_mi_bci/: __init__.py  backends.py  calibration.py  compute_accounting.py  decision.py  evaluation.py  experience.py  experiment.py  fbcsp.py  features.py  linear_models.py  pipeline.py  progress.py  projection_library.py  small_networks.py
hybrid_photonic_mi_bci/datasets/: __init__.py  bciciv_1_asc.py  bnci2014_004.py
hybrid_photonic_mi_bci/host/: __init__.py  acquisition.py  controller.py  experience_store.py  models.py  tk_app.py
hybrid_photonic_mi_bci/workflows/: __init__.py  bnci2014_004_personalization.py  (+5 more)
pure_runtime/: README.md  __init__.py  runtime.py
report/: poster_content_plan.md
scripts/: __init__.py  download_datasets.py
tests/: test_compute_accounting.py  test_cyton_host.py  test_demo_protocol.py  test_demo_spectrum.py  test_fbcsp_design_components.py  test_pipeline.py  test_single_window_interface.py
visualization/: README.md  generate_bciciv_figures.py  generate_fbcsp_design_figures.py  plot_bnci2014_004_personalization.py
(+120 files in other folders)
